--- a/src/web/wynn/credit/index.html
+++ b/src/web/wynn/credit/index.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
     <footer>
-        <p>&copy; 2024 RawFish. Powered by Nori-Web.</p>
+        <p>&copy; 2024-2026 Nori, All rights reserved. Web URL: nori.fish</p>
     </footer>
 </body>
 </html>
