--- a/src/web/wynn/index.html
+++ b/src/web/wynn/index.html
@@ -91,6 +91,10 @@
                         <h4>Item Lootpool</h4>
                         <p>Lootrun reward pools & rotations.</p>
                     </a>
+                    <a class="card" href="https://nori.fish/wynn/aspects">
+                        <h4>Aspect Lootpool</h4>
+                        <p>Weekly aspect lootpool rotation.</p>
+                    </a>
                     <a class="card" href="https://nori.fish/wynn/item/simulation">
                         <h4>Item Simulation</h4>
                         <p>99% of gamblers quit before hitting it big.</p>
@@ -210,7 +214,7 @@
     </main>
 
     <footer style="padding:18px 0; text-align:center;">
-        <p style="margin:0;color:var(--muted)">&copy; 2024 RawFish. Powered by Nori-Web.</p>
+        <p style="margin:0;color:var(--muted)">&copy; 2024-2026 Nori, All rights reserved. Web URL: nori.fish</p>
     </footer>
 
     <!-- Minimal script to filter cards in-place for quick search -->
