--- a/src/web/wynn/uptime/index.html
+++ b/src/web/wynn/uptime/index.html
@@ -65,7 +65,7 @@
     
 
     <footer>
-        <h3>Powered by Nori-Web.</h3>
+        <h3>&copy; 2024-2026 Nori, All rights reserved. Web URL: nori.fish</h3>
     </footer>
 </body>
 </html>
