--- a/src/web/wynn/item/lootpool/index.html
+++ b/src/web/wynn/item/lootpool/index.html
@@ -60,7 +60,7 @@
         </div>
     </div>
     <footer>
-        <p>&copy; 2024 RawFish. Powered by Nori-Web.</p>
+        <p>&copy; 2024-2026 Nori, All rights reserved. Web URL: nori.fish</p>
     </footer>
 </body>
 </html>
