--- a/src/web/wynn/online/index.html
+++ b/src/web/wynn/online/index.html
@@ -46,7 +46,7 @@
     </div>
 
     <footer>
-        <h3>&copy; 2024 RawFish. Powered by Nori-Web.</h3>
+        <h3>&copy; 2024-2026 Nori, All rights reserved. Web URL: nori.fish</h3>
     </footer>
 </body>
 </html>
