--- a/src/web/wynn/recipe/index.html
+++ b/src/web/wynn/recipe/index.html
@@ -84,7 +84,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 RawFish. Powered by Nori-Web.</p>
+        <p>&copy; 2024-2026 Nori, All rights reserved. Web URL: nori.fish</p>
     </footer>
 </body>
 </html>
