formatting stuff and a video

--- a/src/web/robotics/index.html
+++ b/src/web/robotics/index.html
@@ -70,14 +70,14 @@
         </article>
 
         <article class="robotics-project">
-            <h2>Nano FPV Drone</h2>
+            <h2>Micro FPV Drone</h2>
             <div class="robotics-project-body media-side media-right">
                 <div class="robotics-project-content">
-                    <p>Fits in the palm of your hand—smaller than off-the-shelf micros like the Cinewhoop 65-class. Fully custom build; nothing like it on the market.</p>
-                    <p>I designed the frame in CAD, all mounting components (3D-printed), and iterated on the design. I experimented with both 3D-printed frame and carbon-fiber-printed frame at this scale; both are viable. For the production build, the carbon fiber frame was machined by fabrication partners. Equipped with FPV camera and live video footage.</p>
+                    <p>Fits in the palm of your hand—smaller than off-the-shelf micros like the Cinewhoop 65-class. Fully custom build; nothing like it on the market. I designed the frame in CAD, all mounting components (3D-printed), and iterated on the design. I experimented with both 3D-printed frame and carbon-fiber-printed frame at this scale; both are viable. For the production build, the carbon fiber frame was machined by fabrication partners. Equipped with FPV camera and live video footage.</p>
+                    <video src="videos/drone_demo.mp4" controls playsinline></video>
                 </div>
                 <div class="robotics-media">
-                    <img src="images/nano_drone.png" alt="Nano FPV Drone">
+                    <img src="images/micro_drone.png" alt="Micro FPV Drone">
                 </div>
             </div>
         </article>
@@ -146,7 +146,7 @@
             <h2>7 DOF Robot Arm</h2>
             <div class="robotics-project-body media-side media-left">
                 <div class="robotics-project-content">
-                    <p>Panda Franka 7 DOF arm. Robotic manipulation system for pick-and-place operations. Path planning: RRT and potential field—reach the goal while avoiding collisions and obstacles. Forward and inverse kinematics; vision-based object detection. Part of MEAM 5200 at UPenn.</p>
+                    <p>Panda Franka 7 DOF arm. Robotic manipulation system for pick-and-place operations. Path planning: RRT and potential field—reach the goal while avoiding collisions and obstacles. Forward and inverse kinematics; vision-based object detection.</p>
                     <a href="https://github.com/c-y-i/7-DoF-Arm-Manipulation" target="_blank" rel="noopener" class="project-link">GitHub Repo</a>
                 </div>
                 <div class="robotics-media">
