url changes for rotorbench, deployed on nori actually

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -97,11 +97,11 @@
                             <div class="project-header">
                                 <h2>Game & App Development</h2>
                             </div>
-                            <p>Passion projects.</p>
+                            <p>My other software projects</p>
                             
                             <ul class="project-list">
                                 <li><strong>Space Orbs</strong> - Multiplayer web game <span class="tech-tags">WebGL, Flask</span> <a href="https://game.nori.fish" target="_blank" class="project-link">Play Now</a></li>
-                                <li><strong>RotorBench Web App</strong> - Web-based tool for building drones with 3D rendering and performance metrics <span class="tech-tags">React, Node.js, FastAPI, UX/UI Design</span> <a href="https://c-y-i.github.io/CIS5120-HCI/" target="_blank" rel="noopener noreferrer" class="project-link">Open App</a></li>
+                                <li><strong>RotorBench Web App</strong> - Web-based tool for building drones with 3D rendering and performance metrics <span class="tech-tags">React, Node.js, FastAPI, UX/UI Design</span> <a href="https://rotor.nori.fish" target="_blank" rel="noopener noreferrer" class="project-link">Open App</a></li>
                                 <li><strong>2D Rogue-like (WIP)</strong> - Game developed with Godot Engine <span class="tech-tags">Godot, GDScript</span></li>
                                 <li><strong>Inventory Control</strong> - Windows application <span class="tech-tags">VB.NET</span></li>
                             </ul>
