3D model converter utils tool

--- a/src/web/utils/index.html
+++ b/src/web/utils/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="Nori Utils" />
-  <meta property="og:description" content="Utility tools - JSON, regex, encoding, and more" />
+  <meta property="og:description" content="Nori web utility tools" />
   <meta property="og:url" content="https://nori.fish/utils" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://nori.fish/resources/nori_logo.png" />
@@ -75,34 +75,13 @@
       </div>
 
       <div class="utils-category">
-        <h2 class="utils-category-title">Web & Finance</h2>
-        <div class="utils-tools">
-          <a href="#crypto-tracker" class="utils-tool-card">
-            <div class="utils-tool-icon">🪙</div>
-            <h3>Crypto Tracker</h3>
-            <p>Top cryptos by market cap, prices, 24h change</p>
-          </a>
-          <a href="#world-clock" class="utils-tool-card">
-            <div class="utils-tool-icon">🌍</div>
-            <h3>World Clock</h3>
-            <p>Multiple timezones, favorites saved</p>
-          </a>
-          <a href="#youtube-helper" class="utils-tool-card">
-            <div class="utils-tool-icon">▶️</div>
-            <h3>YouTube Helper</h3>
-            <p>Validate URL, open in converters</p>
-          </a>
-          <a href="#chat-assistant" class="utils-tool-card">
-            <div class="utils-tool-icon">💬</div>
-            <h3>Chat Assistant</h3>
-            <p>Prompts, templates, copy to ChatGPT/Claude</p>
-          </a>
-        </div>
-      </div>
-
-      <div class="utils-category">
         <h2 class="utils-category-title">Media & Design</h2>
         <div class="utils-tools">
+          <a href="#model-viewer" class="utils-tool-card">
+            <div class="utils-tool-icon">3D</div>
+            <h3>3D Model Converter</h3>
+            <p>View and convert GLB, GLTF, OBJ, STL, STEP files</p>
+          </a>
           <a href="#image-converter" class="utils-tool-card">
             <div class="utils-tool-icon">🖼️</div>
             <h3>Image Converter</h3>
@@ -127,6 +106,32 @@
             <div class="utils-tool-icon">🎞️</div>
             <h3>Video Compressor</h3>
             <p>Reduce video file size</p>
+          </a>
+        </div>
+      </div>
+
+      <div class="utils-category">
+        <h2 class="utils-category-title">Web & Finance</h2>
+        <div class="utils-tools">
+          <a href="#crypto-tracker" class="utils-tool-card">
+            <div class="utils-tool-icon">🪙</div>
+            <h3>Crypto Tracker</h3>
+            <p>Top cryptos by market cap, prices, 24h change</p>
+          </a>
+          <a href="#world-clock" class="utils-tool-card">
+            <div class="utils-tool-icon">🌍</div>
+            <h3>World Clock</h3>
+            <p>Multiple timezones, favorites saved</p>
+          </a>
+          <a href="#youtube-helper" class="utils-tool-card">
+            <div class="utils-tool-icon">▶️</div>
+            <h3>YouTube Helper</h3>
+            <p>Validate URL, open in converters</p>
+          </a>
+          <a href="#chat-assistant" class="utils-tool-card">
+            <div class="utils-tool-icon">💬</div>
+            <h3>Chat Assistant</h3>
+            <p>Prompts, templates, copy to ChatGPT/Claude</p>
           </a>
         </div>
       </div>
